Improve and fix animations on Safari [#118313137]

--- a/src/css/maplist.less
+++ b/src/css/maplist.less
@@ -11,10 +11,14 @@
     left: 50%;
     top: 50%;
     transform: translateX(-50%);
-    
+
     path {
       stroke: @blue_main;
     }
+  }
+
+  & > .line_below {
+    flex: 0 0 auto;
   }
 
   .wrapper {
@@ -60,6 +64,7 @@
           padding: 5px;
           border: none;
           background-color: transparent;
+          outline: none;
         }
 
         .clear_search {
@@ -67,6 +72,9 @@
           padding: 2px;
           border: 1px solid @grey60;
           border-radius: 50%;
+          opacity: .00001;
+
+          transition: opacity @transTimeDefault @transFuncDefault;
 
           img {
             height: 16px;
@@ -114,6 +122,10 @@
         margin-right: 20px;
 
         transition: visibility @transTimeSlow linear, opacity @transTimeSlow @transFuncDefault, max-width @transTimeSlow @transFuncDefault, margin-right @transTimeSlowest @transFuncDefault;
+
+        .clear_search {
+          opacity: 1;
+        }
 
         & + h2 {
           max-width: 0;
